# LexAI

./: .gitignore  README.md
apps/backend/: main.py  pyproject.toml
apps/backend/api/: routes.py
apps/backend/embeddings/: embedder.py
apps/backend/generation/: gemini.py  prompt_builder.py  prompts.py
apps/backend/ingestion/: chunker.py  parser.py
apps/backend/models/: chunk.py  document.py  embedding.py
apps/backend/services/: rag_service.py
apps/backend/tests/: test_gemini.py  test_parser.py  test_qdrant.py  test_rag.py  test_retriever.py
apps/backend/vectorstore/: indexer.py  qdrant_manager.py  retriever.py
apps/frontend/: package-lock.json
apps/frontend/src/: index.css
apps/frontend/src/components/: ChatInput.jsx  ChatMessage.jsx  Hero.jsx  Navbar.jsx
apps/frontend/src/pages/: Home.jsx
apps/frontend/src/services/: api.js
